--- a/src/system-interface/templates/configuration.html
+++ b/src/system-interface/templates/configuration.html
@@ -19,56 +19,56 @@
             <label class="form-hostIP" for="hostIP"> Host IP  <small><i>    (IP Address of the MRP or VSP)</i></small></label>
         </div>
         <div>
-            <input type="StringField" id="hostIP" value={{ data['HostIp'] }}>
+            {{ form.hostIp }}
         </div>
 
         <div class="form-field">
             <label class="form-SourceDsrcDeviceIP" for="SourceDsrcDeviceIP">Source DSRC Device IP <small><i>    (IP address of DSRC Device)</i></small></label>
         </div>
         <div>
-            <input type="StringField" id="SourceDsrcDeviceIP" value={{ data['SourceDsrcDeviceIp'] }}>
+            {{ form.sourceDsrcDeviceIp }}
         </div>
 
         <div class="form-field">
             <label class="form-IntersectionName" for="IntersectionName">Intersection Name <small><i>    (Name of the intersection)</i></small></label>
         </div>
         <div>
-            <input type="StringField" id="IntersectionName" value={{ data['IntersectionName'] }}>
+            {{ form.intersectionName }}
         </div>
 
         <div class="form-field">
             <label class="form-IntersectionID" for="IntersectionID">Intersection ID <small><i>    (Unique regional identifier for an intersection)</i></small></label>
         </div>
         <div>
-            <input type="StringField" id="IntersectionID" value={{ data['IntersectionID'] }}>
+            {{ form.intersectionID }}
         </div>
 
         <div class="form-field">
             <label class="form-RegionalID" for="RegionalID">Regional ID <small><i>    (Unique regional identifier for an intersection)</i></small></label>
         </div>
         <div>
-            <input type="StringField" id="RegionalID" value={{ data['RegionalID'] }}>
+            {{ form.regionalID }}
         </div>
 
         <div class="form-field">
             <label class="form-DataCollectorIP" for="DataCollectorIP">Data Collector IP <small><i>    (IP address of the data collection server)</i></small></label>
         </div>
         <div>
-            <input type="StringField" id="DataCollectorIP" value={{ data['DataCollectorIP'] }}>
+            {{ form.dataCollectorIP }}
         </div>
 
         <div class="form-field">
             <label class="form-HMIControllerIP" for="HMIControllerIP">HMI Controller IP <small><i>    (IP address of the external computer on which MMITSS HMI will run)</i></small></label>
         </div>
         <div>
-            <input type="StringField" id="HMIControllerIP" value={{ data['HMIControllerIP'] }}>
+            {{ form.hmiControllerIP }}
         </div>
 
         <div class="form-field">
             <label class="form-MessageDistributorIP" for="MessageDistributorIP">MessageDistributor IP <small><i>    (IP Address of the Message Distributor)</i></small></label>
         </div>
         <div>
-            <input type="StringField" id="MessageDistributorIP" value={{ data['MessageDistributorIP'] }}>
+            {{ form.messageDistributorIP }}
         </div>
 
         <div> </div>
