--- a/src/system-interface/templates/configuration.html
+++ b/src/system-interface/templates/configuration.html
@@ -70,11 +70,20 @@
         <div>
             {{ form.messageDistributorIP }}
         </div>
-
-        <div> </div>
         <div>
-            <input type="submit" value="Cancel" onclick="window.location='/configuration';" />
-	        <input type="submit" value="Save" onclick="window.location='/configuration';" />
+        {% with messages = get_flashed_messages() %}
+        {% if messages %}
+          {% for message in messages %}
+            <div class="alert alert-warning alert-dismissible" role="alert">
+            <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">×</span></button>
+              {{message}}
+            </div>
+          {% endfor %}
+        {% endif %}
+        {% endwith %}
+        </div>
+        <div>
+	        <input type="submit" value="Save Changes" onclick="window.location='/configuration';" />
         </div>
   </form>
 
