Removed extra files
Removed extra files

--- a/src/system-interface/templates/local_console.html
+++ b/src/system-interface/templates/local_console.html
@@ -1,3 +1,22 @@
+<!
+***************************************************************************************
+ © 2020 Arizona Board of Regents on behalf of the University of Arizona with rights
+       granted for USDOT OSADP distribution with the Apache 2.0 open source license.
+***************************************************************************************
+local_console.html
+Created by: Sherilyn Keaton
+University of Arizona   
+College of Engineering
+This code was developed under the supervision of Professor Larry Head
+in the Systems and Industrial Engineering Department.
+***************************************************************************************
+Description:
+------------
+This is the html file that contains the presentation for:
+    * MMITSS Component Process Control and Status Reporting Console
+***************************************************************************************
+-->
+
 {% extends "base.html" %}
 
 {% block content %}
@@ -6,7 +25,7 @@
         <h1>Local Console</h1>
     </div>
     <div class="page-header">
-        <h2>{{ intersectionName }}</h2>
+        <h2>{{ pageTitle }}</h2>
     </div>
     <form method="POST" action="/">
         <div></div>
