--- a/src/system-interface/templates/configuration.html
+++ b/src/system-interface/templates/configuration.html
@@ -1,3 +1,23 @@
+<!
+***************************************************************************************
+ © 2020 Arizona Board of Regents on behalf of the University of Arizona with rights
+       granted for USDOT OSADP distribution with the Apache 2.0 open source license.
+***************************************************************************************
+configuration.html
+Created by: Sherilyn Keaton
+University of Arizona   
+College of Engineering
+This code was developed under the supervision of Professor Larry Head
+in the Systems and Industrial Engineering Department.
+***************************************************************************************
+Description:
+------------
+This is an html file that contains the presentation for:
+    * MMITSS Configuration Viewer and Editor
+***************************************************************************************
+-->
+
+
 {% extends "base.html" %}
 
 
@@ -10,7 +30,7 @@
         <h1> </h1>
     </div>
     <div class="page-header">
-        <h2> {{ data['IntersectionName'] }}</h2>
+        <h2> {{ pageTitle }}</h2>
     </div>
 
     <form method="post">
