--- a/src/system-interface/templates/local_console.html
+++ b/src/system-interface/templates/local_console.html
@@ -29,7 +29,7 @@ This is the html file that contains the presentation for:
     </div>
     <form method="POST" action="/">
         <div></div>
-           <iframe src="http://localhost:9001/" width="853" height="480" frameborder="0" allowfullscreen></iframe>
+        <iframe src="http://127.0.0.1:9001/" width="853" height="480" frameborder="0" allowfullscreen></iframe>
         </div>
     </form>
 </div>
