--- a/src/system-interface/templates/base.html
+++ b/src/system-interface/templates/base.html
@@ -1,6 +1,6 @@
 {% extends "bootstrap/base.html" %}
 
-{% block title %}MMITSS SYstem Console Prototype{% endblock %}
+{% block title %}MMITSS System Interface {% endblock %}
 
 {% block navbar %}
 <div class="navbar navbar-inverse" role="navigation">
