Field MapPayload in Configuration Editor
MapPayload is a StringField.

--- a/src/system-interface/templates/configuration.html
+++ b/src/system-interface/templates/configuration.html
@@ -64,6 +64,8 @@ This is an html file that contains the presentation for:
             {{ form.intersectionID }}
         </div>
 
+        {{ renderfield(form.mapPayload)}}
+
         <div class="form-field">
             <label class="form-RegionalID" for="RegionalID">Regional ID <small><i>    (Unique regional identifier for an intersection)</i></small></label>
         </div>
