Web App project logos
In response to web app project logos #153

Put the project logos on the homepage for the web app. It is pretty bare after removing the login call to action, but the perfect place for branding.

I have added the assets to the /static/images folder.

--- a/src/system-interface/templates/index.html
+++ b/src/system-interface/templates/index.html
@@ -25,6 +25,12 @@ This is the html file that contains the presentation for:
 <div class="container">
     <div class="page-header">
         <h1>MMITSS System Interface</h1>
+  </div>
+    <div class="page-content">
+        <div>
+            <img src="static/images/mmitss_logo.png" alt'"MMITSS Logo" class="rounded float-right" >
+        </div>
     </div>
+
 </div>
 {% endblock %}
