Peer Data Decoding Conifiguration
Added the boolean field for PeerDataDecoding.

--- a/src/system-interface/templates/configuration.html
+++ b/src/system-interface/templates/configuration.html
@@ -121,6 +121,7 @@ This is an html file that contains the presentation for:
         {{ renderfield(form.scheduleExecutionBuffer)}}
         {{ renderfield(form.systemPerformanceTimeInterval)}}
         {{ renderfield(form.applicationPlatform)}}
+        {{ renderfield(form.peerDataDecoding)}}
 
         <div>
             {{ form.portNumberMTMessageSender.label }}  
