Configuration keys for data transfer
#158 added keys for data transfer
removed key for portNumberSystemPerformanceDataCollector
#162

--- a/src/system-interface/templates/configuration.html
+++ b/src/system-interface/templates/configuration.html
@@ -223,7 +223,6 @@ This is an html file that contains the presentation for:
         {{ renderfield(form.portNumberMapEngine)}}
         {{ renderfield(form.portNumberLightSirenStatusManager)}}
         {{ renderfield(form.portNumberPeerToPeerPriority)}}
-        {{ renderfield(form.portNumberSystemPerformanceDataCollector)}}
         {{ renderfield(form.psidMap)}}
         {{ renderfield(form.psidSPaT)}}
         {{ renderfield(form.psidRSM)}}
@@ -272,7 +271,12 @@ This is an html file that contains the presentation for:
         {{ renderfield(form.intersectionReferencePointLatitudeDecimalDegree)}}
         {{ renderfield(form.intersectionReferencePointLongitudeDecimalDegree)}}
         {{ renderfield(form.intersectionReferencePointElevationMeter)}}
-
+        {{ renderfield(form.dataTransferFtpServerPort)}}
+        {{ renderfield(form.dataTransferStartTimeHour)}}
+        {{ renderfield(form.dataTransferStartTimeMinute)}}
+        {{ renderfield(form.dataTransferEndTimeHour)}}
+        {{ renderfield(form.dataTransferEndTimeMinute)}}
+        
         <div>
         {% with messages = get_flashed_messages() %}
         {% if messages %}
