Add data transfer MaxRetries
#162  add data transfer MaxRetries

--- a/src/system-interface/templates/configuration.html
+++ b/src/system-interface/templates/configuration.html
@@ -276,6 +276,7 @@ This is an html file that contains the presentation for:
         {{ renderfield(form.dataTransferStartTimeMinute)}}
         {{ renderfield(form.dataTransferEndTimeHour)}}
         {{ renderfield(form.dataTransferEndTimeMinute)}}
+        {{ renderfield(form.dataTransferMaxRetries)}}
         
         <div>
         {% with messages = get_flashed_messages() %}
