--- a/src/system-interface/templates/configuration.html
+++ b/src/system-interface/templates/configuration.html
@@ -35,180 +35,43 @@ This is an html file that contains the presentation for:
     </div>
 
     <form method="post">
-
-        <div class="form-field">
-            <label class="form-hostIP" for="hostIP"> Host IP  <small><i>    (IP Address of the MRP or VSP)</i></small></label>
-        </div>
-        <div>
-            {{ form.hostIp }}
-        </div>
-
-        <div class="form-field">
-            <label class="form-SourceDsrcDeviceIP" for="SourceDsrcDeviceIP">Source DSRC Device IP <small><i>    (IP address of DSRC Device)</i></small></label>
-        </div>
-        <div>
-            {{ form.sourceDsrcDeviceIp }}
-        </div>
-
-        <div class="form-field">
-            <label class="form-IntersectionName" for="IntersectionName">Intersection Name <small><i>    (Name of the intersection)</i></small></label>
-        </div>
-        <div>
-            {{ form.intersectionName }}
-        </div>
-
-        <div class="form-field">
-            <label class="form-IntersectionID" for="IntersectionID">Intersection ID <small><i>    (Unique regional identifier for an intersection)</i></small></label>
-        </div>
-        <div>
-            {{ form.intersectionID }}
-        </div>
-
-        {{ renderfield(form.mapPayload)}}
-
-        <div class="form-field">
-            <label class="form-RegionalID" for="RegionalID">Regional ID <small><i>    (Unique regional identifier for an intersection)</i></small></label>
-        </div>
-        <div>
-            {{ form.regionalID }}
-        </div>
-
-        <div class="form-field">
-            <label class="form-DataCollectorIP" for="DataCollectorIP">Data Collector IP <small><i>    (IP address of the data collection server)</i></small></label>
-        </div>
-        <div>
-            {{ form.dataCollectorIP }}
-        </div>
-
-        <div class="form-field">
-            <label class="form-HMIControllerIP" for="HMIControllerIP">HMI Controller IP <small><i>    (IP address of the external computer on which MMITSS HMI will run)</i></small></label>
-        </div>
-        <div>
-            {{ form.hmiControllerIP }}
-        </div>
-
-        <div class="form-field">
-            <label class="form-MessageDistributorIP" for="MessageDistributorIP">MessageDistributor IP <small><i>    (IP Address of the Message Distributor)</i></small></label>
-        </div>
-        <div>
-            {{ form.messageDistributorIP }}
-        </div>
-        <div>
-            {{ form.priorityRequestGeneratorServerIP.label }}  
-        </div>
-        <div>
-            {{ form.priorityRequestGeneratorServerIP }}
-        </div>
-        <div>
-            {{ form.vehicleType.label }}  
-        </div>
-        <div>
-            {{ form.vehicleType }}
-        </div>
-        <div>
-            {{ form.logging.label }}  
-        </div>
-        <div>
-            {{ form.logging }}
-        </div>
-        <div>
-            {{ form.srmTimedOutTime.label }}  
-        </div>
-        <div>
-            {{ form.srmTimedOutTime }}
-        </div>
-
+        {{ renderfield(form.hostIp)}}
+        {{ renderfield(form.sourceDsrcDeviceIp)}}
+        {{ renderfield(form.intersectionName)}}
+        {{ renderfield(form.intersectionID)}}
+        {{ renderfield(form.regionalID)}}
+        {{ renderfield(form.dataCollectorIP)}}
+        {{ renderfield(form.hmiControllerIP)}}
+        {{ renderfield(form.messageDistributorIP)}}
+        
+        {{ renderfield(form.priorityRequestGeneratorServerIP)}}
+        {{ renderfield(form.vehicleType)}}
+        {{ renderfield(form.logging)}}
+        {{ renderfield(form.srmTimedOutTime)}}
         {{ renderfield(form.scheduleExecutionBuffer)}}
         {{ renderfield(form.systemPerformanceTimeInterval)}}
         {{ renderfield(form.applicationPlatform)}}
         {{ renderfield(form.peerDataDecoding)}}
 
-        <div>
-            {{ form.portNumberMTMessageSender.label }}  
-        </div>
-        <div>
-            {{ form.portNumberMTMessageSender }}
-        </div>
-        <div>
-            {{ form.portNumberMTMessageReceiver.label }}  
-        </div>
-        <div>
-            {{ form.portNumberMTMessageReceiver }}
-        </div>
-        <div>
-            {{ form.portNumberMTMessageEncoder.label }}  
-        </div>
-        <div>
-            {{ form.portNumberMTMessageEncoder }}
-        </div>
-        <div>
-            {{ form.portNumberMTMessageDecoder.label }}  
-        </div>
-        <div>
-            {{ form.portNumberMTMessageDecoder }}
-        <div>
-            {{ form.portNumberMessageDistributor.label }}  
-        </div>
-        <div>
-            {{ form.portNumberMessageDistributor }}
-        </div>
-        <div>
-            {{ form.portNumberRSMDecoder.label }}  
-        </div>
-        <div>
-            {{ form.portNumberRSMDecoder }}
-        </div>
-        <div>
-            {{ form.portNumberOBUBSMReceiver.label }}  
-        </div>
-        <div>
-            {{ form.portNumberOBUBSMReceiver }}
-        </div>
-        <div>
-            {{ form.portNumberHostBsmDecoder.label }}  
-        </div>
-        <div>
-            {{ form.portNumberHostBsmDecoder }}
-        </div>
-        <div>
-            {{ form.portNumberTrajectoryAware.label }}  
-        </div>
-        <div>
-            {{ form.portNumberTrajectoryAware }}
-        </div>
-        <div>
-            {{ form.portNumberPriorityRequestServer.label }}  
-        </div>
-        <div>
-            {{ form.portNumberPriorityRequestServer }}
-        </div>
-        <div>
-            {{ form.portNumberPrioritySolver.label }}  
-        </div>
-        <div>
-            {{ form.portNumberPrioritySolver }}
-        </div>
-        <div>
-            {{ form.portNumberPriorityRequestGenerator.label }}  
-        </div>
-        <div>
-            {{ form.portNumberPriorityRequestGenerator }}
-        </div>
-        <div>
-            {{ form.portNumberTrafficControllerInterface.label }}  
-        </div>
-        <div>
-            {{ form.portNumberTrafficControllerInterface }}
-        </div>
-        <div>
-            {{ form.portNumberTrafficControllerCurrPhaseListener.label }}  
-        </div>
-        <div>
-            {{ form.portNumberTrafficControllerCurrPhaseListener }}
-        </div>
+        {{ renderfield(form.portNumberMTMessageSender)}}
+        {{ renderfield(form.portNumberMTMessageReceiver)}}
+        {{ renderfield(form.portNumberMTMessageEncoder)}}
+        {{ renderfield(form.portNumberMTMessageDecoder)}}
 
+        {{ renderfield(form.portNumberMessageDistributor)}}
+        {{ renderfield(form.portNumberRSMDecoder)}}
+        {{ renderfield(form.portNumberOBUBSMReceiver)}}
+        {{ renderfield(form.portNumberHostBsmDecoder)}}
+        {{ renderfield(form.portNumberTrajectoryAware)}}
 
+        {{ renderfield(form.portNumberPriorityRequestServer)}}
+        {{ renderfield(form.portNumberPrioritySolver)}}
+        {{ renderfield(form.portNumberPriorityRequestGenerator)}}
+
+        {{ renderfield(form.portNumberTrafficControllerInterface)}}
+        {{ renderfield(form.portNumberTrafficControllerCurrPhaseListener)}}
         {{ renderfield(form.portNumberTrafficControllerTimingPlanSender)}}
+
         {{ renderfield(form.portNumberPerformanceObserver)}}
         {{ renderfield(form.portNumberHMIController)}}
         {{ renderfield(form.portNumberPrioritySolverToTCIInterface)}}
